improve hotel listing backend
